set swagger host based on env; refactored models.News;
