# docs/swagger.json
@@ -34,7 +34,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/university.News"
+                                "$ref": "#/definitions/models.News"
                             }
                         }
                     },
@@ -97,7 +97,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/university.News"
+                            "$ref": "#/definitions/models.News"
                         }
                     },
                     "400": {
@@ -309,8 +309,8 @@
                 }
             }
         },
-        "/editors/verify/{code}": {
-            "post": {
+        "/editors/verify/{hash}": {
+            "get": {
                 "description": "editor verify registration",
                 "consumes": [
                     "application/json"
@@ -470,29 +470,7 @@
                 }
             }
         },
-        "models.Session": {
-            "type": "object",
-            "properties": {
-                "expires_at": {
-                    "type": "string"
-                },
-                "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Verification": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "verified": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "university.News": {
+        "models.News": {
             "type": "object",
             "properties": {
                 "body": {
@@ -541,6 +519,28 @@
                     "items": {
                         "$ref": "#/definitions/models.Editor"
                     }
+                }
+            }
+        },
+        "models.Session": {
+            "type": "object",
+            "properties": {
+                "expires_at": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Verification": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
                 }
             }
         }
