# internal/controller/httpv1/editors.go
@@ -181,7 +181,7 @@ func (h *Handler) editorRefresh(ctx *gin.Context) {
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /editors/verify/{code} [post]
+// @Router /editors/verify/{hash} [get]
 // editorVerify - Подтверждение создания учетной записи редактора
 func (h *Handler) editorVerify(ctx *gin.Context) {
 	hash := ctx.Param("hash")
@@ -206,7 +206,7 @@ func (h *Handler) editorVerify(ctx *gin.Context) {
 // @ID editorGetAllNews
 // @Accept json
 // @Produce json
-// @Success 200 {array} university.News
+// @Success 200 {array} models.News
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
@@ -236,7 +236,7 @@ func (h *Handler) editorGetAllNews(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "news id"
-// @Success 200 {object} university.News
+// @Success 200 {object} models.News
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
